--- a/clusters/cluster0/kubernetes/apps/git-system/gitea/ks.yaml
+++ b/clusters/cluster0/kubernetes/apps/git-system/gitea/ks.yaml
@@ -2,21 +2,21 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app jellyfin
+  name: &app gitea
   namespace: flux-system
 spec:
-  targetNamespace: media
+  targetNamespace: gitea
   commonMetadata:
     labels:
       app.kubernetes.io/name: *app
-  path: ./clusters/cluster0/kubernetes/apps/media/jellyfin/app/
+  path: ./clusters/cluster0/kubernetes/apps/git-system/gitea/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
-  wait: false
+  wait: true
   interval: 3m
   retryInterval: 1m
   timeout: 2m
   dependsOn:
-    - name: media-storage
+    - name: cnpg-databases
