--- a/clusters/cluster0/kubernetes/apps/git-system/gitea/app/helmrelease.yaml
+++ b/clusters/cluster0/kubernetes/apps/git-system/gitea/app/helmrelease.yaml
@@ -472,7 +472,7 @@ spec:
       #       name: gitea-app-ini-plaintext
 
       ## @param gitea.additionalConfigFromEnvs Additional configuration sources from environment variables
-      additionalConfigFromEnvs: []
+      # additionalConfigFromEnvs: []
 
       ## @param gitea.podAnnotations Annotations for the Gitea pod
       podAnnotations: {}
