--- a/clusters/cluster0/kubernetes/apps/git-system/gitea/app/helmrelease.yaml
+++ b/clusters/cluster0/kubernetes/apps/git-system/gitea/app/helmrelease.yaml
@@ -398,7 +398,7 @@ spec:
         enabled: true
         token:
         serviceMonitor:
-          enabled: true
+          enabled: false
           #  additionalLabels:
           #    prometheus-release: prom1
           interval: ""
