namespace to gitea db

--- a/clusters/cluster0/kubernetes/apps/databases/cnpg/databases/cnpg-gitea.yaml
+++ b/clusters/cluster0/kubernetes/apps/databases/cnpg/databases/cnpg-gitea.yaml
@@ -15,6 +15,7 @@ spec:
       dataChecksums: true
       secret:
         name: gitea-user-password
+        namespace: git-system
   imageName: ghcr.io/cloudnative-pg/postgresql:18.0
   resources:
     requests:
