--- a/clusters/cluster0/kubernetes/apps/git-system/gitea/app/gitea-user-password.yaml
+++ b/clusters/cluster0/kubernetes/apps/git-system/gitea/app/gitea-user-password.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
   name: gitea-user-password
-  namespace: cnpg-system
+  namespace: git-system
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
