prowlarr pvc post migrate

--- a/clusters/cluster0/kubernetes/apps/media/prowlarr/app/prowlarr-deployment.yaml
+++ b/clusters/cluster0/kubernetes/apps/media/prowlarr/app/prowlarr-deployment.yaml
@@ -43,7 +43,7 @@ spec:
       volumes:
       - name: prowlarr-config
         persistentVolumeClaim:
-          claimName: "prowlarr-config"
+          claimName: "prowlarr-config-new"
   selector:
     matchLabels:
       app: prowlarr
