--- a/clusters/cluster0/kubernetes/apps/media/prowlarr/app/prowlarr-config-pvc-ceph.yaml
+++ b/clusters/cluster0/kubernetes/apps/media/prowlarr/app/prowlarr-config-pvc-ceph.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: prowlarr-config
+  name: prowlarr-config-ceph
   namespace: media
   labels:
     app: prowlarr
@@ -10,6 +10,5 @@ spec:
    - ReadWriteOnce
   resources:
     requests:
-      storage: 500Mi
-  storageClassName: local-path
-  
+      storage: 5Gi
+  storageClassName: ceph-block
