jellyfin ceph complete

--- a/clusters/cluster0/kubernetes/apps/media/jellyfin/app/jellyfin-deployment.yaml
+++ b/clusters/cluster0/kubernetes/apps/media/jellyfin/app/jellyfin-deployment.yaml
@@ -50,7 +50,7 @@ spec:
       volumes:
         - name: jellyfin-config
           persistentVolumeClaim:
-            claimName: jellyfin-config
+            claimName: jellyfin-config-ceph
         - name: jellyfin-cache
           persistentVolumeClaim:
             claimName: jellyfin-cache
