ombi ceph post migration

--- a/clusters/cluster0/kubernetes/apps/media/ombi/app/ombi-deployment.yaml
+++ b/clusters/cluster0/kubernetes/apps/media/ombi/app/ombi-deployment.yaml
@@ -41,7 +41,7 @@ spec:
       volumes:
       - name: ombi-config
         persistentVolumeClaim:
-          claimName: "ombi-config"
+          claimName: "ombi-config-ceph"
   selector:
     matchLabels:
       app: ombi
