plex ceph gigigibibibtitit

--- a/clusters/cluster0/kubernetes/apps/media/plex/app/plex-config-pvc-ceph.yaml
+++ b/clusters/cluster0/kubernetes/apps/media/plex/app/plex-config-pvc-ceph.yaml
@@ -10,6 +10,6 @@ spec:
    - ReadWriteOnce
   resources:
     requests:
-      storage: 100G
+      storage: 100Gi
   storageClassName: ceph-block
   
