--- a/clusters/cluster0/kubernetes/apps/media/plex/app/plex-deployment.yaml
+++ b/clusters/cluster0/kubernetes/apps/media/plex/app/plex-deployment.yaml
@@ -49,7 +49,7 @@ spec:
       volumes:
         - name: plex-config
           persistentVolumeClaim:
-            claimName: plex-config
+            claimName: plex-config-ceph
         - name: plex-media-pvc
           persistentVolumeClaim:
             claimName: media-pvc
