--- a/clusters/cluster0/kubernetes/apps/media/radarr/app/radarr-config-pvc-ceph.yaml
+++ b/clusters/cluster0/kubernetes/apps/media/radarr/app/radarr-config-pvc-ceph.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: radarr-config-pvc
+  name: radarr-config-ceph
   namespace: media
   labels:
     app: radarr
