radarr deployment use ceph

--- a/clusters/cluster0/kubernetes/apps/media/radarr/app/radarr-deployment.yaml
+++ b/clusters/cluster0/kubernetes/apps/media/radarr/app/radarr-deployment.yaml
@@ -45,7 +45,7 @@ spec:
       volumes:
       - name: radarr-config
         persistentVolumeClaim:
-          claimName: "radarr-config"
+          claimName: "radarr-config-ceph"
       - name: radarr-media
         persistentVolumeClaim:
           claimName: "media-pvc"
