readarr deployment use ceph

--- a/clusters/cluster0/kubernetes/apps/media/readarr/app/readarr-deployment.yaml
+++ b/clusters/cluster0/kubernetes/apps/media/readarr/app/readarr-deployment.yaml
@@ -45,7 +45,7 @@ spec:
       volumes:
       - name: readarr-config
         persistentVolumeClaim:
-          claimName: "readarr-config"
+          claimName: "readarr-config-ceph"
       - name: readarr-media
         persistentVolumeClaim:
           claimName: "media-pvc"
