sonarr deployment points to ceph

--- a/clusters/cluster0/kubernetes/apps/media/sonarr/app/sonarr-deployment.yaml
+++ b/clusters/cluster0/kubernetes/apps/media/sonarr/app/sonarr-deployment.yaml
@@ -45,7 +45,7 @@ spec:
       volumes:
       - name: sonarr-config
         persistentVolumeClaim:
-          claimName: "sonarr-config"
+          claimName: "sonarr-config-ceph"
       - name: sonarr-media
         persistentVolumeClaim:
           claimName: "media-pvc"
