sabnzbd deployment points to ceph

--- a/clusters/cluster0/kubernetes/apps/media/sabnzbd/app/sabnzbd-deployment.yaml
+++ b/clusters/cluster0/kubernetes/apps/media/sabnzbd/app/sabnzbd-deployment.yaml
@@ -50,7 +50,7 @@ spec:
       volumes:
         - name: sabnzbd-config
           persistentVolumeClaim:
-            claimName: "sabnzbd-config"
+            claimName: "sabnzbd-config-ceph"
         - name: sabnzbd-media
           persistentVolumeClaim:
             claimName: "media-pvc"
