cluster user updated

--- a/clusters/cluster0/kubernetes/apps/databases/cnpg/databases/cnpg-gitea-replica.yaml
+++ b/clusters/cluster0/kubernetes/apps/databases/cnpg/databases/cnpg-gitea-replica.yaml
@@ -16,7 +16,7 @@ spec:
     - name: cnpg-gitea
       connectionParameters:
         host: cnpg-gitea-rw.cnpg-system.svc
-        user: streaming_replica
+        user: gitea
         dbname: gitea
         sslmode: require
       password:
